--- a/bower.json
+++ b/bower.json
@@ -14,8 +14,8 @@
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.15",
-    "angular-validation-match": "~1.5.2",
-    "angular-messages": "~1.4.8"
+    "angular-validation-match": "~1.5.2"
+
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
